tests/snapshots/example_app_completions__nu__basic.snap
---
source: tests/example_app_completions.rs
expression: test!(basic_command)
---
export extern 'my-app' [
  --help(-h) # Print help information
  -c # 
  -v # 
]

# Subcommand
export extern 'my-app test' [
  -d # 
  --help(-h) # Print help information
  -c # 
]

# Print this message or the help of the given subcommand(s)
export extern 'my-app help' [
  subcommand?: string # The subcommand whose help message to display
  -c # 
]


