tests/snapshots/example_app_completions__nu__feature-sample.snap
---
source: tests/example_app_completions.rs
expression: test!(feature_sample_command)
---
def 'nu-complete my-app --choice' [] {
  [ "first", "second", ]
}

# Tests completions
export extern 'my-app' [
  file?: path # some input file
  choice?: string@'nu-complete my-app --choice' # 
  --help(-h) # Print help information
  --version(-V) # Print version information
  --config(-c) # some config file
]

# tests things
export extern 'my-app test' [
  --case: string # the case to test
  --help(-h) # Print help information
  --version(-V) # Print version information
]

# Print this message or the help of the given subcommand(s)
export extern 'my-app help' [
  subcommand?: string # The subcommand whose help message to display
]


