tests/snapshots/example_app_completions__nu__quoting.snap
---
source: tests/example_app_completions.rs
expression: test!(quoting_command)
---
export extern 'my-app' [
  --help(-h) # Print help information
  --version(-V) # Print version information
  --single-quotes # Can be 'always', 'auto', or 'never'
  --double-quotes # Can be "always", "auto", or "never"
  --backticks # For more information see `echo test`
  --backslash # Avoid '\n'
  --brackets # List packages [filter]
  --expansions # Execute the shell command with $SHELL
]

# Can be 'always', 'auto', or 'never'
export extern 'my-app cmd-single-quotes' [
  --help(-h) # Print help information
]

# Can be "always", "auto", or "never"
export extern 'my-app cmd-double-quotes' [
  --help(-h) # Print help information
]

# For more information see `echo test`
export extern 'my-app cmd-backticks' [
  --help(-h) # Print help information
]

# Avoid '\n'
export extern 'my-app cmd-backslash' [
  --help(-h) # Print help information
]

# List packages [filter]
export extern 'my-app cmd-brackets' [
  --help(-h) # Print help information
]

# Execute the shell command with $SHELL
export extern 'my-app cmd-expansions' [
  --help(-h) # Print help information
]

# Print this message or the help of the given subcommand(s)
export extern 'my-app help' [
  subcommand?: string # The subcommand whose help message to display
]


