tests/snapshots/example_app_completions__nu__value-hint.snap
---
source: tests/example_app_completions.rs
expression: test!(value_hint_command)
---
def 'nu-complete my-app --choice' [] {
  [ "bash", "fish", "zsh", ]
}

export extern 'my-app' [
  ...command_with_args?: string # 
  --help # Print help information
  --choice: string@'nu-complete my-app --choice' # 
  --unknown: string # 
  --other: any # 
  --path(-p): path # 
  --file(-f): path # 
  --dir(-d): path # 
  --exe(-e): path # 
  --cmd-name: string # 
  --cmd(-c): string # 
  --user(-u): string # 
  --host(-h): string # 
  --url: string # 
  --email: string # 
]


